@@ -8,7 +8,7 @@ if exist ACTUAL.TXT del ACTUAL.TXT
 if exist data\tasks.txt del data\tasks.txt
 
 REM compile the code into the bin folder
-javac --module-path %PATH_TO_FX% --add-modules ALL-MODULE-PATH -cp ..\src\main\java -Xlint:none -d ..\bin ..\src\main\java\duke\*.java
+javac -cp ..\src\main\java -Xlint:none -d ..\bin ..\src\main\java\duke\*.java
 IF ERRORLEVEL 1 (
     echo ********** BUILD FAILURE **********
     exit /b 1
